--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "pg": "^8.16.0",
-    "validator": "^13.9.0"
+    "pg": "^8.16.0","express-rate-limit": "^6.7.0"
+
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
